# audio2

./: .gitignore  config.py  conversation_log_20251226_123959.jsonl  example.env  listar_altavoces_microfonos.py  main.py  pyproject.toml  readme.md
api/: session_config.py  websocket_client.py
audio/: constants.py  manager.py
logging_modules/: conversation_logger.py
prompts/: host.yaml  human_resources.yaml  interviewer.yaml  loader.py  marketing_analyst.yaml  phone_operator.yaml
state/: conversation_state.py
utils/: helpers.py
